--- a/public/theme.css
+++ b/public/theme.css
@@ -2,7 +2,8 @@
 
 :root {
     --table-border-width: 0.5em;
-    --table-border-color: #432;
+    --table-border-light: #432;
+    --table-border-dark: #321;
 }
 
 * {
@@ -33,7 +34,7 @@ header {
     text-align: center;
     color: #DCB;
     margin-bottom: 2em;
-    border-bottom: 1em ridge var(--table-border-color);
+    border-bottom: 1em ridge var(--table-border-light);
     font-family: 'Almendra SC', serif;
     box-shadow: #000 0 1em 3em;
 }
@@ -63,7 +64,9 @@ table {
     max-width: 100%;
     position: relative;
     background-color: var(--table-border-color);
-    border: calc(var(--table-border-width) / 2) outset var(--table-border-color);
+    border: calc(var(--table-border-width) / 2) solid var(--table-border-light);;
+    border-bottom-color: var(--table-border-dark);
+    border-right-color: var(--table-border-dark);
     font-size: 150%;
     box-shadow: #000 1em 1em 3em;
     font-family: 'Roboto Slab', serif;
@@ -75,7 +78,9 @@ thead {
 }
 
 td, th {
-    border: calc(var(--table-border-width) / 2) inset var(--table-border-color);
+    border: calc(var(--table-border-width) / 2) solid var(--table-border-dark);
+    border-bottom-color: var(--table-border-light);
+    border-right-color: var(--table-border-light);
     padding: 1em;
     box-sizing: border-box;
     height: 4em;
